tests/fail/test_main_with_params.tds
integer main(integer r){
    integer y;
    y = 1;
}